--- a/config/mongo.yml
+++ b/config/mongo.yml
@@ -17,8 +17,6 @@ test:
   w: 0
 
 # set these environment variables on your prod server
+
 production:
-  <<: *defaults
-  database: ooply
-  username: <%= ENV['MONGO_USERNAME'] %>
-  password: <%= ENV['MONGO_PASSWORD'] %>
+  uri: <%= ENV['MONGOHQ_URL'] %>
